# ros-rover

./: CMakeLists.txt  package.xml
launch/: rover_bot.launch
launch/includes/: control.launch.xml  teleop.launch.xml
src/: driver_node.py  motor.py
