<?xml version="1.0"?>
<package format="2">
  <name>rover_bot</name>
  <version>0.0.0</version>
  <description>The rover_bot package</description>

  <maintainer email="michaeljalloh19@gmail.com">Michael Jalloh</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  
  <exec_depend>python-rpi.gpio</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
